fix(notification): fix css overflow

--- a/src/App/NotificationProvider/Notifications/Notifications.scss
+++ b/src/App/NotificationProvider/Notifications/Notifications.scss
@@ -10,7 +10,6 @@ $typesLite: (
 .af {
   &-notifications {
     position: fixed;
-    height: 100vh;
     width: 400px;
     background: rgba(0, 0, 0, 0);
     padding: 1rem;
